app/scss/main.scss
// **
// variables
// **

$spacing: 20px;
$border-radius: 5px;
$font-family: "Roboto";
$colors: #45A7B9 #404E57 #F6F6F6 #E6E6E6;


// **
// imports
// **

// **
// reset
// **

* {
  border: 0;
  padding: 0;
  margin: 0;
  background: none;
  text-decoration: none;
  color: inherit;
  box-sizing: border-box;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  font-weight: normal;

  &:focus {
    outline: none;
  }
}

ol, ul {
  list-style: none;
}

pre {
  font-family: inherit !important;
}

input {
  font: inherit !important;
}

// **
// styles
// **

body {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  min-height: 100vh;
  font-family: $font-family;
  font-size: 16px;
  color: #E6E6E6;
  text-align: center;
}

.menu {
  width: 1045px;
  margin: 35px auto 0;
  text-align: left;
  position: relative;

  a {
    color: white;
    margin-right: 20px;
    opacity: .7;
    font-weight: 500;
    font-size: 15px;

    &:hover {
      opacity: 1;
      color: white;
    }

    &.nav-logo {
      margin-bottom: -1px;
      overflow: hidden;
      display: inline-block;
      background-image: url(../images/navbar-logo@2x.png);
      background-size: 100%;
      width: 66px;
      height: 15px;
      opacity: 1;
    }

    &.hosted {
      position: absolute;
      right: 0;
      opacity: 1;
      margin-right: 0;

      &:hover {
        opacity: .7;
      }
    }
  }
}

h1 {
  font-size: 65px;
  font-weight: 100;

  span,
  div {
    font-weight: 100;
  }
}

h2 {
  text-transform: uppercase;
  font-size: 54px;
  font-weight: 100;
}

h3 {
  font-size: 25px;
  margin-bottom: 33px;
  font-weight: 300;
}

a {
  color: nth($colors, 1);
  font-weight: bold;

  &:hover {
    color: lighten(nth($colors, 1), 5%);
  }

  &:active {
    color: nth($colors, 1);
  }
}

code {
  position: relative;
  display: inline-block;
  width: 1000px;
  border: 1px solid #D2D2D2;
  border-radius: 4px;
  padding: 20px 100px 20px 30px;
  background: lighten(#D2D2D2, 15%);
  margin-bottom: 25px;
  text-align: left;
  line-height: 25px;
  font-weight: bold;

  .pbcopy {
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
    display: inline-block;
    font-family: $font-family;
    font-size: 10px;
    line-height: 23px;
    background: #fff;
    border: 1px solid #D2D2D2;
    border-radius: 4px;
    padding: 0px 5px;
    cursor: pointer;

    &.zeroclipboard-is-hover {
      background: darken(nth($colors, 3), 3%);
    }

    &.zeroclipboard-is-active {
      background: darken(nth($colors, 3), 5%);
    }
  }
}

.btn {
  $height: 49px;
  display: inline-block;
  background: nth($colors, 1);
  height: $height;
  line-height: $height;
  padding: 0 33px;
  color: #fff;
  border-radius: 4px;

  &:hover {
    background: lighten(nth($colors, 1), 5%);
    color: #fff;
  }

  &:active {
    background: nth($colors, 1);
    color: #fff;
  }
}

header {
  position: relative;
  height: 713px;
  background: nth($colors, 1);
  color: #FFFFFF;

  .rtail-logo {
    width: 45px;
    height: 33px;
    background-image: url(../images/icn-log@2x.png);
    background-size: 100%;
    margin: 73px auto 30px;
  }

  h1 {
    div {
      margin: 0 auto;
      text-align: left;
      transform: translateX(30px);
      width: 890px;
    }
  }

  h2 {
    color: #CCE4E9;
  }

  .browser {
    $height: 766px;
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 360px);
    width: 1070px;
    height: $height;
    background-image: url(../images/img-chrome@2x.png);
    background-size: 100%;
    $padding: 87px 13px;
    padding: nth($padding, 1) nth($padding, 2) nth($padding, 2);

    iframe {
      display: block;
      height: 100%;
      width: 100%;
      border-radius: 0 0 4px 4px;
    }
  }
}

.readme {
  background-image: url(../images/icn-live@2x.png);
  background-position: 50% 427px;
  background-size: 48px 36px;
  padding-top: 460px;
  padding-bottom: 80px;
  color: #7B7B7B;

  h2 {
    margin-top: 30px;
  }

  p {
    margin-bottom: 25px;
  }
}

.github {
  height: 518px;
  background-color: #404E57;
  background-image: url(../images/img-github@2x.png);
  background-size: auto 100%;
  padding-top: 125px;

  .github-logo {
    background-image: url(../images/icn-github@2x.png);
    background-size: auto 100%;
    height: 52px;
    margin-bottom: 25px;
  }
}

.contributors {
  padding-top: 205px;
  background-image: url(../images/icn-contrib@2x.png);
  background-size: 44px 33px;
  background-position: 50% 140px;
  color: #555555;

  h3 {
    color: #7B7B7B;
  }

  table {
    text-align: left;
    margin: 0 auto;
    width: 350px;
    margin-bottom: 140px;

    .contributor-type {
      color: #ccc;
    }
  }
}

footer {
  background-color: nth($colors, 3);
  padding-bottom: 50px;
  color: #555555;

  h2 {
    margin-top: 100px;
  }

  .sponsors-list {
    width: 530px;
    margin: 0 auto;
    overflow: hidden;
    margin-top: 50px;

    img {
      transform: scale(0.5);
      float: left;
      margin-right: 20px;
    }

    a {
      width: 100px;
      display: block;
      float: left;
      background: #e9e9e9;
      font-weight: 300;
      font-size: 13px;
      line-height: 18px;
      margin-right: 50px;
    }
    a:nth-child(2) {
      padding: 37px 0 28px 0;
      border-radius: 75px;
    }
    a:nth-child(3) {
      padding: 37px 0 28px 0;
    }
    a:nth-child(4) {
      padding: 13px 0 10px;
      position: relative;
      margin-top: 25px;
      margin-right: 0;
    }
    a:nth-child(4):before {
      content: "";
      position: absolute;
      top: -25px;
      left: 0;
      width: 0;
      height: 0;
      border-left: 50px solid transparent;
      border-right: 50px solid transparent;
      border-bottom: 25px solid #e9e9e9;
    }
    a:nth-child(4):after {
      content: "";
      position: absolute;
      bottom: -25px;
      left: 0;
      width: 0;
      height: 0;
      border-left: 50px solid transparent;
      border-right: 50px solid transparent;
      border-top: 25px solid #e9e9e9;
    }
  }

  h3 {
    color: #7B7B7B;
    margin-top: 10px;
    line-height: 39px;
    margin: 0 auto;
  }

  .bottom {
    border-top: solid 1px #e9e9e9;
    margin-top: 40px;
    padding-top: 50px;
  }
}

